errors.txt
[ 95%] Building CXX object robotic_comprehension_of_viscocity/CMakeFiles/behavior_1.dir/src/behavior_1.cpp.o
/home/josiekate/catkin_ws/src/robotic_comprehension_of_viscocity/src/behavior_1.cpp: In function ‘bool goToLocation(float*)’:
/home/josiekate/catkin_ws/src/robotic_comprehension_of_viscocity/src/behavior_1.cpp:97:32: error: ‘ArmJointAnglesAction’ is not a member of ‘jaco_msgs’
  actionlib::SimpleActionClient<jaco_msgs::ArmJointAnglesAction> ac("/mico_arm_driver/joint_angles/arm_joint_angles", true);
                                ^
/home/josiekate/catkin_ws/src/robotic_comprehension_of_viscocity/src/behavior_1.cpp:97:32: error: ‘ArmJointAnglesAction’ is not a member of ‘jaco_msgs’
/home/josiekate/catkin_ws/src/robotic_comprehension_of_viscocity/src/behavior_1.cpp:97:63: error: template argument 1 is invalid
  actionlib::SimpleActionClient<jaco_msgs::ArmJointAnglesAction> ac("/mico_arm_driver/joint_angles/arm_joint_angles", true);
                                                               ^
/home/josiekate/catkin_ws/src/robotic_comprehension_of_viscocity/src/behavior_1.cpp:97:67: error: invalid type in declaration before ‘(’ token
  actionlib::SimpleActionClient<jaco_msgs::ArmJointAnglesAction> ac("/mico_arm_driver/joint_angles/arm_joint_angles", true);
                                                                   ^
/home/josiekate/catkin_ws/src/robotic_comprehension_of_viscocity/src/behavior_1.cpp:97:122: error: expression list treated as compound expression in initializer [-fpermissive]
  actionlib::SimpleActionClient<jaco_msgs::ArmJointAnglesAction> ac("/mico_arm_driver/joint_angles/arm_joint_angles", true);
                                                                                                                          ^
/home/josiekate/catkin_ws/src/robotic_comprehension_of_viscocity/src/behavior_1.cpp:98:2: error: ‘ArmJointAnglesGoal’ is not a member of ‘jaco_msgs’
  jaco_msgs::ArmJointAnglesGoal goal;
  ^
/home/josiekate/catkin_ws/src/robotic_comprehension_of_viscocity/src/behavior_1.cpp:98:32: error: expected ‘;’ before ‘goal’
  jaco_msgs::ArmJointAnglesGoal goal;
                                ^
/home/josiekate/catkin_ws/src/robotic_comprehension_of_viscocity/src/behavior_1.cpp:99:2: error: ‘goal’ was not declared in this scope
  goal.angles.joint1 = position[0];
  ^
/home/josiekate/catkin_ws/src/robotic_comprehension_of_viscocity/src/behavior_1.cpp:106:5: error: request for member ‘waitForServer’ in ‘ac’, which is of non-class type ‘int’
  ac.waitForServer();
     ^
/home/josiekate/catkin_ws/src/robotic_comprehension_of_viscocity/src/behavior_1.cpp:107:5: error: request for member ‘sendGoal’ in ‘ac’, which is of non-class type ‘int’
  ac.sendGoal(goal);
     ^
/home/josiekate/catkin_ws/src/robotic_comprehension_of_viscocity/src/behavior_1.cpp:109:5: error: request for member ‘waitForResult’ in ‘ac’, which is of non-class type ‘int’
  ac.waitForResult();
     ^
/home/josiekate/catkin_ws/src/robotic_comprehension_of_viscocity/src/behavior_1.cpp: In function ‘int main(int, char**)’:
/home/josiekate/catkin_ws/src/robotic_comprehension_of_viscocity/src/behavior_1.cpp:118:2: error: ‘nodeHandle’ is not a member of ‘ros’
  ros::nodeHandle node_handle;
  ^
/home/josiekate/catkin_ws/src/robotic_comprehension_of_viscocity/src/behavior_1.cpp:118:18: error: expected ‘;’ before ‘node_handle’
  ros::nodeHandle node_handle;
                  ^
/home/josiekate/catkin_ws/src/robotic_comprehension_of_viscocity/src/behavior_1.cpp:121:42: error: ‘node_handle’ was not declared in this scope
  ros::Subscriber joint_pose_subscriber = node_handle.subscribe("/joint_states", 1, joint_state_callback);
                                          ^
/home/josiekate/catkin_ws/src/robotic_comprehension_of_viscocity/src/behavior_1.cpp:126:60: error: ‘TwistStamped’ is not a member of ‘geometry_msgs’
  ros::Publisher velocity_publisher = node_handle.advertise<geometry_msgs::TwistStamped>("/mico_arm_driver/in/cartesian_velocity", 10);
                                                            ^
make[2]: *** [robotic_comprehension_of_viscocity/CMakeFiles/behavior_1.dir/src/behavior_1.cpp.o] Error 1
make[1]: *** [robotic_comprehension_of_viscocity/CMakeFiles/behavior_1.dir/all] Error 2
make: *** [all] Error 2
Invoking "make -j1 -l1" failed
josiekate@josiekate-VirtualBox:~/catkin_ws$ 

